--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^7.0.1",
+    "@vercel/analytics": "^1.5.0",
     "framer-motion": "^12.23.15",
     "lucide-react": "^0.544.0",
     "react": "^19.1.1",
